# Cpp-Autochess

./: CMakeLists.txt  LICENSE  README.md  TERV.md  diagram.md  felhasznaloi.md  game.md  main.cpp
Editor/: Editor.cpp  Editor.h
Exception/: Error.cpp  Error.h
File Management/: Filemanagement.cpp  Filemanagement.h
Game/: Army.cpp  Army.h  Computer.cpp  Computer.h  Game.cpp  Game.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Team.cpp  Team.h
Game/Pieces/: Bishop.cpp  Bishop.h  Horse.cpp  Horse.h  King.cpp  King.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
List/: List.hpp
Memtrace/: gtest_lite.h  memtrace.cpp  memtrace.h
Menu/: ButtonFunction.cpp  ButtonFunction.h  ButtonFunctionHandler.cpp  ButtonFunctionHandler.h  Buttonarmy.cpp  Buttonarmy.h  Buttonvoid.cpp  Buttonvoid.h  button.cpp  button.h  buttonfunctions.cpp  buttonfunctions.h  menu.cpp  menu.h
Ui/: ui.cpp  ui.h  uiEditor.cpp  uiEditor.h  uiGame.cpp  uiGame.h  uiMenu.cpp  uiMenu.h
